--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -2,6 +2,74 @@ input.form-control {
     margin-bottom: 5px;
 }
 
-body {
-    padding-top: 36px;
+.navbar-header{
+    width:100%;
 }
+
+.navbar
+{
+    background-color: dodgerblue;
+}
+
+.navbar a {
+    color: white;
+}
+.color-white{
+    color: white;
+}
+.right-side-button{
+    float:right;
+}
+.left-side-button{
+    float:left;
+    margin-left: 0px;
+}
+.footer {
+    position: fixed;
+    width: 100%;
+}
+body {
+    overflow-x: hidden;
+    margin-top: 50px;
+    margin-bottom: 60px;
+}
+
+.pb-list
+{
+    padding-left: 0%;
+    padding-right: 0%;
+}
+.pb-chevron
+{
+    margin-left: 5px;
+}
+.mycontent-left {
+    border-right: 1px
+    solid #333;
+    border-color: darkgrey;
+    margin-top: 0px;
+    height: 130vw
+}
+
+.innerblock
+{
+    position: absolute;
+    right:15px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    border-bottom-left-radius: 5px;
+    opacity: 0.7;
+    background-color:black;
+
+}
+
+.intro {
+
+    height:auto;
+    overflow:auto;
+}
+​.img{
+    float:right;
+    height:auto;
+}​
+
