--- a/public/assignment/Views/User/templates/profile.view.client.html
+++ b/public/assignment/Views/User/templates/profile.view.client.html
@@ -8,7 +8,7 @@
             </a>
             <p class="navbar-text pull-right">
 
-                <a href="" class="nav-link">
+                <a ng-click="model.update(model.user)" href="" class="nav-link">
           <span class="glyphicon glyphicon-ok">
           </span>
                 </a>
