--- a/public/assignment/Views/Widget/templates/widget-list.view.client.html
+++ b/public/assignment/Views/Widget/templates/widget-list.view.client.html
@@ -72,7 +72,7 @@
 
         <div class="col-xs-2 col-xs-offset-7 col-md-1 col-md-offset-9 col-lg-1 col-lg-offset-9 col-sm-1 col-sm-offset-8">
         <div class="navbar-text text-center">
-                <a href="../../User/templates/profile.view.client.html" class="nav-link">
+                <a href="#/profile/{{model.user_id}}" class="nav-link">
                     <span class="glyphicon glyphicon-user"></span>
                 </a>
             </div>
