--- a/public/assignment/Views/User/templates/login.view.client.html
+++ b/public/assignment/Views/User/templates/login.view.client.html
@@ -14,7 +14,7 @@
            type="password"
            placeholder="password"/>
 
-    <a class="btn btn-primary btn-block"
+    <a class="btn btn-primary btn-block" href="#/profile/{{model.user_id}}"
        ng-click="model.login(user)">
         Login
     </a>
