--- a/public/assignment/Views/User/templates/profile.view.client.html
+++ b/public/assignment/Views/User/templates/profile.view.client.html
@@ -30,22 +30,22 @@
 
             <div class="form-group">
                 <label for="username">Username</label>
-                <input ng-model="model.user.username" value="pb-1193" type="text" class="form-control" id="username" placeholder="Username">
+                <input name="username" ng-model="model.user.username" value="pb-1193" type="text" class="form-control" id="username" placeholder="Username">
             </div>
 
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input ng-model="model.user.email" value="panktibhalani@gmail.com" type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
+                <input name="email" ng-model="model.user.email" value="panktibhalani@gmail.com" type="email" class="form-control" id="email" placeholder="alice@wonderland.com">
             </div>
 
             <div class="form-group">
                 <label for="first-name">First Name</label>
-                <input ng-model="model.user.firstName" value="Pankti" type="text" class="form-control" id="first-name" placeholder="Alice">
+                <input name="firstname" ng-model="model.user.firstName" value="Pankti" type="text" class="form-control" id="first-name" placeholder="Alice">
             </div>
 
             <div class="form-group">
                 <label for="last-name">Last Name</label>
-                <input ng-model="model.user.lastName" value="Bhalani" type="text" class="form-control" id="last-name" placeholder="Wonderland">
+                <input name="lastname" ng-model="model.user.lastName" value="Bhalani" type="text" class="form-control" id="last-name" placeholder="Wonderland">
             </div>
         </form>
 
