--- a/public/assignment/Views/User/templates/register.view.client.html
+++ b/public/assignment/Views/User/templates/register.view.client.html
@@ -1,11 +1,19 @@
 
     <div class="container">
         <h1>Register</h1>
+        <div ng-show="model.error" class="alert alert-danger">
+            {{model.error}}
+        </div>
+
+        <div ng-show="model.message" class="alert alert-info">
+            {{model.message}}
+        </div>
+
+
         <input ng-model="user.username" class="form-control" placeholder="username"/>
         <input ng-model="user.password" class="form-control" type="password" placeholder="password"/>
         <input ng-model="user.verifypassword" class="form-control" type="password" placeholder="validate password"/>
-        <a class="btn btn-primary btn-block" ng-click="model.addUser(user)"
-           href="#/profile/{{model.user_id}}">Register</a>
+        <a class="btn btn-primary btn-block" ng-click="model.addUser(user)">Register</a>
         <a class="btn btn-danger  btn-block"
            href="#/login">Cancel</a>
 
