--- a/public/assignment/Views/Widget/templates/widget-list.view.client.html
+++ b/public/assignment/Views/Widget/templates/widget-list.view.client.html
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="pb-list container-fluid">
-    <ul class="list-group">
+    <ul wbdv-directives="" class="list-group">
         <li ng-repeat="widget in model.widgets" class="list-group-item">
             <div class="innerblock">
                 <a href="#/user/{{model.user_id}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}" class="nav-link">
