--- a/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
+++ b/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
@@ -3,11 +3,24 @@
         <label for="exampleInputURL">URL</label>
         <input ng-model="model.widget.url" value="https://tgc-cache.s3.amazonaws.com/images/uploads/articles/Boston-skyline.jpg" type="text" class="form-control" id="exampleInputURL">
     </div>
+
+    <input  name="widgetId" value="{{model.widgetId}}"   style="display: none"/>
+    <input  name="userId" value="{{model.user_id}}"   style="display: none"/>
+    <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
+    <input  name="pageId" value="{{model.pageId}}"   style="display: none"/>
     <div class="form-group">
         <label for="exampleInputWidth">Width</label>
         <input value="100%" ng-model="model.widget.width" type="text" class="form-control" id="exampleInputWidth">
     </div>
+
     <div class="form-group">
-        <label for="exampleInputUpload">Upload</label>
-        <input ng-model="model.widget.url" type="file" class="form-control" id="exampleInputUpload">
+        <label for="urltext">URL</label>
+        <input type="text" ng-model="model.widget.url" class="form-control" id="urltext" value="http://www.images.google.com/23rTGf4oF">
+    </div>
+    <div class="form-group">
+        <label for="fileupload">Upload</label>
+        <input type="file" name="myFile" class="form-control btn-block btn-file" id="fileupload">
+    </div>
+    <div class="form-group">
+    <button type="submit" class="btn btn-block btn-primary">Upload Image</button>
     </div>
