--- a/public/assignment/Views/Widget/templates/image.view.client.html
+++ b/public/assignment/Views/Widget/templates/image.view.client.html
@@ -1,1 +1,2 @@
-<img ng-src="{{widget.url}}" width="{{widget.width}}" class="img-responsive" alt="Responsive image"/>
+<img src="{{model.checkSafeURLImage(widget.url, widget.isUploaded)}}" ng-src="{{widget.url}}" width="{{widget.width}}" class="img-responsive" alt="Responsive image"/>
+
