--- a/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
+++ b/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
@@ -4,13 +4,13 @@
         <input ng-model="model.widget.url" value="https://tgc-cache.s3.amazonaws.com/images/uploads/articles/Boston-skyline.jpg" type="text" class="form-control" id="exampleInputURL">
     </div>
 
-    <input  name="widgetId" value="{{model.widgetId}}"   style="display: none"/>
+    <input  name="widgetId" value="{{model.widgetID}}"   style="display: none"/>
     <input  name="userId" value="{{model.user_id}}"   style="display: none"/>
     <input  name="websiteId" value="{{model.websiteId}}"   style="display: none"/>
     <input  name="pageId" value="{{model.pageId}}"   style="display: none"/>
     <div class="form-group">
         <label for="exampleInputWidth">Width</label>
-        <input value="100%" ng-model="model.widget.width" type="text" class="form-control" id="exampleInputWidth">
+        <input name="width" value="100%" ng-model="model.widget.width" type="text" class="form-control" id="exampleInputWidth">
     </div>
 
     <div class="form-group">
