--- a/public/assignment/Views/Widget/templates/widget-edit.view.client.html
+++ b/public/assignment/Views/Widget/templates/widget-edit.view.client.html
@@ -22,7 +22,7 @@
 </nav>
 
 <div class="container-fluid">
-    <form action = "api/upload" method="post" enctype="multipart/form-data">
+    <form action = "/api/upload" method="post" enctype="multipart/form-data">
 
         <br>
         <div class="alert alert-danger" ng-show="model.error">
