--- a/public/assignment/Views/User/templates/profile.view.client.html
+++ b/public/assignment/Views/User/templates/profile.view.client.html
@@ -47,6 +47,10 @@
                 <label for="last-name">Last Name</label>
                 <input name="lastname" ng-model="model.user.lastName" value="Bhalani" type="text" class="form-control" id="last-name" placeholder="Wonderland">
             </div>
+            <div class="form-group">
+                <label for="phone">Phone no:</label>
+                <input name="lastname" ng-model="model.user.phone" value="8574079390" type="text" class="form-control" id="phone" placeholder="0000000000">
+            </div>
         </form>
 
         <a class="btn btn-primary btn-block"
