--- a/public/assignment/Views/Widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/Views/Widget/templates/widget-chooser.view.client.html
@@ -48,6 +48,14 @@
             </a>
         </li>
 
+        <li class="list-group-item">
+            <a ng-click="model.addNewWidget(5)"
+
+               class="nav-link">
+                Text
+            </a>
+        </li>
+
     </ul>
 </div>
 <nav class="navbar navbar-default navbar-fixed-bottom">
