--- a/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
+++ b/public/assignment/Views/Widget/templates/editors/image-edit.view.client.html
@@ -24,3 +24,8 @@
     <div class="form-group">
     <button type="submit" class="btn btn-block btn-primary">Upload Image</button>
     </div>
+
+    <div class="form-group">
+        <a class="btn btn-primary btn-block"
+           href="#/user/{{model.user_id}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{model.widgetID}}/flickr">Search</a>
+    </div>
